--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -43,7 +43,7 @@
         <div class="form-container">
             <form class="form-login" onsubmit="login(event)">
                 <h3 class="my-title">
-                    Sing up!
+                    Iniciar Sesión
                     <i class="bi bi-caret-right-square"></i>
                 </h3>
                 <div>
