--- a/galeria.html
+++ b/galeria.html
@@ -27,7 +27,7 @@
                     <a href="/iniciar sesion.html">Iniciar sesión</a>
                 </li>
                 <li>
-                    <a href="/servicios.html">Servicios</a>
+                    <a href="/acercade.html">Acerca de</a>
                 </li>
                 <li>
                     <a href="">Galería</a>
