--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="/iniciar sesion.html">Iniciar sesión</a>
                 </li>
                 <li>
-                    <a href="/servicios.html">Servicios</a>
+                    <a href="/acercade.html">Acerca de</a>
                 </li>
                 <li>
                     <a href="/galeria.html">Galería</a>
@@ -48,7 +48,7 @@
             <p>Limpieza de interiores, tapizados, torpedo, puertas, techo.
                 Limpieza de motor y restauración de plásticos y ópticas.
                 Trabajos a domicilio.<br>
-                <a href="/servicios.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer más..</button></a>
+                <a href="/acercade.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer más..</button></a>
             </p>
         </header>
 
