--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -27,13 +27,13 @@
                     <a href="/iniciar sesion.html">Iniciar sesión</a>
                 </li>
                 <li>
-                    <a href="">Servicios</a>
+                    <a href="./acercade.html">Acerca de</a>
                 </li>
                 <li>
-                    <a href="">Galería</a>
+                    <a href="./galeria.html">Galería</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="./">Contacto</a>
                 </li>
             </ul>
 
