--- a/acercade.html
+++ b/acercade.html
@@ -9,12 +9,12 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="acercade.css">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
         <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-    <title>Servicios</title>
+    <title>Acerca de</title>
 </head>
 <body>
     <div class="container">
@@ -27,10 +27,10 @@
                     <a href="/iniciar sesion.html">Iniciar sesión</a>
                 </li>
                 <li>
-                    <a href="/servicios.html">Servicios</a>
+                    <a href="/acercade.html">Acerca de</a>
                 </li>
                 <li>
-                    <a href="">Galería</a>
+                    <a href="./galeria.html">Galería</a>
                 </li>
                 <li>
                     <a href="">Contacto</a>
@@ -40,6 +40,18 @@
         </nav>
         <hr>
 
+        <article class="acercademi">
+            <h2>ACERCA DE SOLCAR</h2>
+            <p>SolCar es un microemprendimiento que nace de la pasión por la estética vehicular.
+                En SolCar, me encargo personalmente de dejar los autos en un óptimo estado, realizando los pasos necesarios para hacerlo posible.
+                Hago limpieza interior, trabajando en tapizados, torpedos, etc.
+                Realizo trabajo en ópticas, restaurándolas y así darle un aspecto nuevo.
+                También realizo pulido exterior, quitando rayones, y marcas que se forman con el día a día.            
+            </p>
+
+            <img alt="sol" src="./img/solange.jpg">
+
+        </article>
         
 </body>
 </html>
