--- a/galeria.html
+++ b/galeria.html
@@ -30,10 +30,10 @@
                     <a href="/acercade.html">Acerca de</a>
                 </li>
                 <li>
-                    <a href="">Galería</a>
+                    <a href="./galeria.html">Galería</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
             </ul>
 
