--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="/galeria.html">Galería</a>
                 </li>
                 <li>
-                    <a href="">Contacto</a>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
             </ul>
 
