--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -33,7 +33,7 @@
                     <a href="./galeria.html">Galería</a>
                 </li>
                 <li>
-                    <a href="./">Contacto</a>
+                    <a href="./contacto.html">Contacto</a>
                 </li>
             </ul>
 
@@ -69,5 +69,7 @@
             </form>
         </div>
     </main>
+
+    <script src="./iniciarsesion.js"></script>
 </body>
 </html>
