--- a/contacto.html
+++ b/contacto.html
@@ -19,29 +19,30 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="nav-main">
-            <a href="/index.html">
-                <img src="img/solcar.png" alt="NewsLogo" class="logo">
-            </a>
-            <ul class="nav-menu">
-                <li>
-                    <a href="/iniciar sesion.html">Iniciar sesión</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="#"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav m-lg-auto">
+                <li class="nav-item active">
+                    <a class="text-warning" href="/iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
                 </li>
-                <li>
-                    <a href="/acercade.html">Acerca de</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/acercade.html">Acerca de</a>
                 </li>
-                <li>
-                    <a href="./galeria.html">Galería</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/servicios.html">Servicios</a>
                 </li>
-                <li>
-                    <a href="./trabajos.html">Contacto</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/contacto.html">Contacto</a>
                 </li>
             </ul>
+        </div>
+    </nav>
 
-        </nav>
-        <hr>
-    </div>
 
     <div class="data">
         <ul>
@@ -55,7 +56,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52857.01919721397!2d-59.07680187057618!3d-34.10631586241183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6a92357b4d%3A0x5f7d9ac7c145085d!2sZ%C3%A1rate%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1624380001287!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
-
+    <footer class="footer">
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+        
+    </footer>
 
 </body>
 
