--- a/acercade.html
+++ b/acercade.html
@@ -17,28 +17,29 @@
     <title>Acerca de</title>
 </head>
 <body>
-    <div class="container">
-        <nav class="nav-main">
-            <a href="/index.html">
-                <img src="img/solcar.png" alt="NewsLogo" class="logo">
-            </a>
-            <ul class="nav-menu">
-                <li>
-                    <a href="/iniciar sesion.html">Iniciar sesión</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="/index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav m-lg-auto">
+                <li class="nav-item active">
+                    <a class="text-warning" href="/iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
                 </li>
-                <li>
-                    <a href="/acercade.html">Acerca de</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/acercade.html">Acerca de</a>
                 </li>
-                <li>
-                    <a href="./galeria.html">Galería</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/servicios.html">Servicios</a>
                 </li>
-                <li>
-                    <a href="">Contacto</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/contacto.html">Contacto</a>
                 </li>
             </ul>
-
-        </nav>
-        <hr>
+        </div>
+    </nav>
 
         <article class="acercademi">
             <h2>ACERCA DE SOLCAR</h2>
@@ -52,6 +53,11 @@
             <img alt="sol" src="./img/solange.jpg">
 
         </article>
+
+        <footer class="footer">
+            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+            
+        </footer>
         
 </body>
 </html>
