--- a/index.html
+++ b/index.html
@@ -12,63 +12,64 @@
     <!-- CSS -->
     <link rel="stylesheet" href="estilos.css">
     <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <title>SolCar</title>
 </head>
 
 <body>
-
-    <div class="container">
-        <nav class="nav-main">
-            <a href="/index.html">
-                <img src="img/solcar.png" alt="NewsLogo" class="logo">
-            </a>
-            <ul class="nav-menu">
-                <li>
-                    <a href="/iniciar sesion.html">Iniciar sesión</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" href="/index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav m-lg-auto">
+                <li class="nav-item active">
+                    <a class="text-warning" href="/iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
                 </li>
-                <li>
-                    <a href="/acercade.html">Acerca de</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/acercade.html">Acerca de</a>
                 </li>
-                <li>
-                    <a href="/galeria.html">Galería</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/servicios.html">Servicios</a>
                 </li>
-                <li>
-                    <a href="./contacto.html">Contacto</a>
+                <li class="nav-item">
+                    <a class="text-warning" href="/contacto.html">Contacto</a>
                 </li>
             </ul>
+        </div>
+    </nav>
 
-        </nav>
-        <hr>
+    <header class="principal">
+        <h2>TRATAMIENTOS PARA TU AUTO</h2>
+        <p>Limpieza de interiores, tapizados, torpedo, puertas, techo.
+            Limpieza de motor y restauración de plásticos y ópticas.
+            Trabajos a domicilio.<br>
+            <a href="/acercade.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer
+                    más..</button></a>
+        </p>
+    </header>
 
-        <header class="principal">
-            <h2>TRATAMIENTOS PARA TU AUTO</h2>
-            <p>Limpieza de interiores, tapizados, torpedo, puertas, techo.
-                Limpieza de motor y restauración de plásticos y ópticas.
-                Trabajos a domicilio.<br>
-                <a href="/acercade.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer más..</button></a>
-            </p>
-        </header>
+    <section class="redes">
+        <p>Seguinos</p>
+        <div class="links">
+            <a href="https://www.facebook.com/Solcar.detail">
+                <i class="bi bi-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/solcar.detail/">
+                <i class="bi bi-instagram"></i>
+            </a>
+        </div>
+    </section>
 
-        <section class="redes">
-            <p>Seguinos</p>
-            <div class="links">
-                <a href="https://www.facebook.com/Solcar.detail">
-                    <i class="bi bi-facebook"></i>
-                </a>
-                <a href="https://www.instagram.com/solcar.detail/">
-                    <i class="bi bi-instagram"></i>
-                </a>
-            </div>
-        </section>
+    <footer class="footer">
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+        
+    </footer>
 
-        <footer class="footer">
-            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">@flomccartney</a></h3>
-        </footer>
-
-    </div>
 
 </body>
 
