--- a/contacto.html
+++ b/contacto.html
@@ -42,19 +42,24 @@
             </ul>
         </div>
     </nav>
-
-
-    <div class="data">
+    
+    <div class="container">
+        <div class="data">
         <ul>
             <li><a href="https://wa.me/5491160113083/?text=Hola%20quiero%20info"><i class="bi bi-whatsapp"></i>   WhatsApp</a></li>
             <li><a href="mailto:solcar.detailing@hotmail.com"><i class="bi bi-envelope"></i>  Correo electrónico</a></li>
             <li><i class="bi bi-geo-alt"></i>  Zárate - Realizo trabajos a domicilio, consultar zona.</li>
         </ul>
-    </div>
+        </div>
 
     <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52857.01919721397!2d-59.07680187057618!3d-34.10631586241183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6a92357b4d%3A0x5f7d9ac7c145085d!2sZ%C3%A1rate%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1624380001287!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52857.01919721397!2d-59.07680187057618!3d-34.10631586241183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6a92357b4d%3A0x5f7d9ac7c145085d!2sZ%C3%A1rate%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1624380001287!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
+
+    </div>
+
+
+
 
     <footer class="footer">
         <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
