--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
     <section class="redes">
         <p>Seguinos</p>
         <div class="links">
-            <a href="https://www.facebook.com/Solcar.detail">
+            <a href="https://www.facebook.com/Solcar.detail" target="_blank">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a href="https://www.instagram.com/solcar.detail/">
+            <a href="https://www.instagram.com/solcar.detail/" target="_blank">
                 <i class="bi bi-instagram"></i>
             </a>
         </div>
     </section>
 
     <footer class="footer">
-        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
         
     </footer>
 
