--- a/servicios.html
+++ b/servicios.html
@@ -80,7 +80,7 @@
         </div>
 
         <footer class="footer">
-            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
             
         </footer>
         
