--- a/acercade.html
+++ b/acercade.html
@@ -55,7 +55,7 @@
         </article>
 
         <footer class="footer">
-            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+            <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
             
         </footer>
         
