--- a/iniciar sesion.html
+++ b/iniciar sesion.html
@@ -73,10 +73,9 @@
     </main>
 
     <footer class="footer">
-        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/">Florencia Mantella</a><a href> - @solcar.detail</a></h3>
+        <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
         
     </footer>
-
     <script src="./iniciarsesion.js"></script>
 </body>
 </html>
