--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav m-lg-auto">
                 <li class="nav-item active">
-                    <a class="text-warning" href="/iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
+                    <a class="text-warning" href="./iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/acercade.html">Acerca de</a>
+                    <a class="text-warning" href="./acercade.html">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/servicios.html">Servicios</a>
+                    <a class="text-warning" href="./servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/contacto.html">Contacto</a>
+                    <a class="text-warning" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,7 @@
         <p>Limpieza de interiores, tapizados, torpedo, puertas, techo.
             Limpieza de motor y restauración de plásticos y ópticas.
             Trabajos a domicilio.<br>
-            <a href="/acercade.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer
+            <a href="./acercade.html" class="btn"><button type="button" class="btn btn-outline-warning">Leer
                     más..</button></a>
         </p>
     </header>
