--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="#"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,16 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav m-lg-auto">
                 <li class="nav-item active">
-                    <a class="text-warning" href="/iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
+                    <a class="text-warning" href="./iniciar sesion.html">Iniciar Sesión <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/acercade.html">Acerca de</a>
+                    <a class="text-warning" href="./acercade.html">Acerca de</a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/servicios.html">Servicios</a>
+                    <a class="text-warning" href="./servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="text-warning" href="/contacto.html">Contacto</a>
+                    <a class="text-warning" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
