--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="/index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./img/solcar.png" class="img-fluid" width="150px" height="auto"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
