--- a/servicios.html
+++ b/servicios.html
@@ -83,6 +83,6 @@
             <h3>Sitio Web creado por <a href="https://www.instagram.com/flomccartney/" target="_blank">Florencia Mantella</a><a href="http://www.instagram.com/solcar.detail" target="_blank"> - @solcar.detail</a></h3>
             
         </footer>
-        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
